# task_manager

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  justfile  vcpkg.json
.github/workflows/: build.yml
api/: CMakeLists.txt
api/include/: BaseApiEvent.hpp  BaseApiUserInfo.hpp  gcal_api.hpp
api/meta_schemas/: GCalApiEvent.json  GCalApiEventsList.json  GCalApiUserInfo.json
api/src/: gcal_api.cpp
core/: CMakeLists.txt
core/include/: account.hpp  calendar.hpp  core.hpp  db.hpp  defines.hpp  event.hpp  sqlite_orm_type_mapping.hpp  time.hpp
core/src/: account.cpp  calendar.cpp  cli.cpp  db.cpp  event.cpp
daemon/: CMakeLists.txt
daemon/include/: daemon.hpp  lifecycle_daemon.hpp
daemon/src/: daemon.cpp  lifecycle_daemon.cpp  main.cpp
deamon/: CMakeLists.txt  org.task_manager.Daemon.xml
deamon/include/: daemon.hpp
deamon/src/: daemon.cpp  main.cpp
shared/include/: defines.hpp  time.hpp
